[FIX] web: toggler button must remain visible
To reproduce
============
- go on any record with list view (for example a Quotation)
- Check many hidden fields in the list view to show them
- The dialogue box for checking and unchecking hidden fields moves
with the horizontal scrollbar, sometimes even going off screen.

Problem
=======
the position of the dropdown menu is computed using the position of the toggler
butoon, so if this button moves the menu moves with it

Solution
========
make the toggler button sticky so it's always visible and the dropdawn menu
will keep same position.

opw-3589726

X-original-commit: 6fb2619866893b47c8cb947a40f3457625960a5c

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -274,6 +274,7 @@
 
         .o_list_actions_header {
             width: 32px;
+            background-color: var(--ListRenderer-thead-bg-color);
         }
 
         .o_data_row.o_list_no_open {
